k8/hub.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  ports:
    - port: 3006
      name: api
    - port: 3007
      name: webapi
    - port: 8006
      name: gateway
  selector:
    app: hub
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: threads-swarm
spec:
  externalTrafficPolicy: Local
  selector:
    app: hub
  ports:
    - port: 4006
      name: threads-swarm
  type: LoadBalancer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hub
  labels:
    app: hub
spec:
  replicas: 0
  serviceName: hub
  selector:
    matchLabels:
      app: hub
  template:
    metadata:
      labels:
        app: hub
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      terminationGracePeriodSeconds: 60
      containers:
        - name: hub
          image: 'textile/hub:2.6.17'
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 3006
            - name: webapi
              containerPort: 3007
            - name: gateway
              containerPort: 8006
          resources:
            requests:
              memory: 1Gi
              cpu: 1
            limits:
              memory: 2Gi
  volumeClaimTemplates:
    - metadata:
        name: hub-store
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 4Gi
