k8/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None # headless mode
  selector:
    role: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo"
  replicas: 0
  selector:
    matchLabels:
      role: mongo
      environment: edge
  template:
    metadata:
      labels:
        role: mongo
        environment: edge
    spec:
      serviceAccountName: mongo-sidecar
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 30
      containers:
        - name: mongo-sidecar
          image: morphy/k8s-mongo-sidecar:0.5.2
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
        - name: mongo
          image: mongo:4.4
          command:
            - mongod
            - "--bind_ip_all"
            - "--replSet"
            - rs0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-store
              mountPath: /data/db
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: mongo-store
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
